# STM32_TASKS_2

./: LEDD2  README.md
Proje_1/: LEDD2  README.md
Proje_1/LEDD1/: LEDD1.ioc  README.md
Proje_1/LEDD1/Core/Src/: main.c
Proje_1/LEDD2/: LEDD2.ioc
Proje_1/LEDD2/Core/Src/: main.c
Proje_2/: README.md
Proje_2/Buttonled/: README.md  buttonled5.ioc
Proje_2/Buttonled/Core/Src/: main.c
Proje_2/Buttonled2/: README.md  buttonled6.ioc
Proje_2/Buttonled2/Core/Src/: main.c
Proje_3/: README.md  butonled7.ioc
Proje_3/Core/Src/: main.c
Proje_4/: README.md
Proje_4/Basic_Timer/: README.md  basictimer.ioc
Proje_4/Basic_Timer/Core/Src/: main.c
Proje_4/Button_timer_led/: README.md  button_timer_led.ioc
Proje_4/Button_timer_led/Core/Src/: main.c  stm32f4xx_it.c
Proje_4/Insert_capture_mode_timer/: README.md  insertcapturemodetimer.ioc
Proje_4/Insert_capture_mode_timer/Core/Src/: main.c  stm32f4xx_hal_msp.c
Proje_5/: README.md  isi_sensor_macro.ioc
Proje_5/Core/Inc/: adc_methods.h  main.h
Proje_5/Core/Src/: adc_methods.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
Proje_5/QT/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
